added color gradients

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <nav>
             <ul>
                 <li>
-                    Nav 1
+                    <a href="#AboutMe">About Me</a>
                 </li>
                 <li>
-                    Nav 2
+                    <a href="#Projects">Projects</a>
                 </li>
                 <li>
-                    Nav 3
+                    <a href="#Contact">Contact Info</a>
                 </li>
             </ul>
         </nav>
