--- a/index.html
+++ b/index.html
@@ -29,4 +29,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+        
+    </main>
+
+<footer>
+        Made by Geaumez, LLC. @BaileyDaisyRicoCorp
+</footer>
 </body>
